src/app/NavBar/styles.less
@import "stremio-colors";
.nav-bar {
    height: 44px;
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: @colorsecondary;
    .nav-tab {
        height: 100%;
        padding: 0 1.5%;
        display: flex;
        flex-direction: row;
        align-items: center;
        &.active {
            background-color: @colorbgmain;
        }
        &:hover:not(.active) {
            background-color: @colordarkest20;
        }
        &:hover, &.active {
            .nav-tab-icon {
                fill: @colorwhite;
            }
            .nav-tab-label {
                color: @colorwhite;
            }
        }
        .nav-tab-icon {
            fill: @colorwhite80;
            height: 100%;
            width: 18px;
            margin-right: 10px;
        }
        .nav-tab-label {
            color: @colorwhite80;
            font-size: 15px;
        }
    }
}

